--- a/inventorymanagement/templates/layout.html
+++ b/inventorymanagement/templates/layout.html
@@ -36,7 +36,10 @@
                 <ul class="navbar-nav my-2 my-lg-0">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('loout') }}">Logout</a>
+                            <a class="nav-link" href="#">Hi, {{ current_user.email }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
