--- a/inventorymanagement/templates/register.html
+++ b/inventorymanagement/templates/register.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-6 offset-md-3 border pt-2">
+        <br>
         <div class="row">
             <div class="col-md-12">
                 <form method="POST" action="">
