--- a/inventorymanagement/templates/view_location.html
+++ b/inventorymanagement/templates/view_location.html
@@ -1,6 +1,176 @@
 {% extends "layout.html" %}
 {% block content %}
-
-    
-
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-12 border pt-2">
+                <h2>Inventory Location</h2>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <br>
+        <div class="row">
+            <div class="col-md-12 table-responsive-sm border pt-2" style="height:600px; overflow: auto;"> 
+                <table class="table table-light table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Product ID</th>
+                            <th>Product Name</th>
+                            <th>Quantity</th>
+                            <th>Location/s</th>
+                            <th>Edit</th>
+                            <th>Move</th>
+                        </tr>
+                    </thead>
+                    <tbody >
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>john@example.com</td>     
+                            <td>Location</td>
+                            <td>Edit</td>
+                            <td>Move</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <br>
+    </div>
 {% endblock content %}
