--- a/inventorymanagement/templates/layout.html
+++ b/inventorymanagement/templates/layout.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
 
+    <!-- Sb Admin CSS -->
+    <link rel="stylesheet" href="static/css/sb-admin-2.css">
+
         {% if title%}
             <title>{{title}}</title>
         {% else %}
