--- a/inventorymanagement/templates/add_product.html
+++ b/inventorymanagement/templates/add_product.html
@@ -12,6 +12,10 @@
                             {{ form.name(class="form-control form-control-lg") }}
                         </div>
                         <div class="form-group">
+                            {{ form.location.label(class="form-control-label") }}
+                            {{ form.location(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
                             {{ form.quantity.label(class="form-control-label") }}
                             {{ form.quantity(class="form-control form-control-lg") }}
                         </div>
