--- a/inventorymanagement/templates/home.html
+++ b/inventorymanagement/templates/home.html
@@ -2,19 +2,20 @@
 {% block content %}
     <div class="col-md-12">
             <div class="row">
-                    <div class="col-lg-3 col-md-6 border rounded pt-2">
-                        <div class="panel panel-green">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="border rounded bg-success panel">
                             <div class="panel-heading">
                                 <br>
                                 <div class="row">
                                     <div class="col-md-3">
                                         
                                     </div>
-                                    <div class="col-md-9 text-right">
+                                    <div class="col-md-8 text-right">
                                         <div class="huge">26</div>
-                                        <div>New Tasks!</div>
+                                        <div>Total Products</div>
                                     </div>
                                 </div>
+                                <br>
                             </div>
                             <a href="{{ url_for('view_product') }}">
                                 <div class="panel-footer">
@@ -24,19 +25,20 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 border rounded pt-2">
-                        <div class="panel panel-green">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="border rounded bg-success panel">
                             <div class="panel-heading">
                                 <br>
                                 <div class="row">
                                     <div class="col-md-3">
-                                       
+                                        
                                     </div>
-                                    <div class="col-md-9 text-right">
-                                        <div class="huge">12</div>
-                                        <div>New Tasks!</div>
+                                    <div class="col-md-8 text-right">
+                                        <div class="huge">26</div>
+                                        <div>Total Locations</div>
                                     </div>
                                 </div>
+                                <br>
                             </div>
                             <a href="{{ url_for('view_location') }}">
                                 <div class="panel-footer">
@@ -46,46 +48,47 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 border rounded pt-2">
-                        <div class="panel panel-green border rounded">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="border rounded bg-success panel">
                             <div class="panel-heading">
                                 <br>
                                 <div class="row">
                                     <div class="col-md-3">
                                         
                                     </div>
-                                    <div class="col-md-9 text-right">
-                                        <div class="huge">124</div>
-                                        <div>New Orders!</div>
+                                    <div class="col-md-8 text-right">
+                                        <div class="huge">26</div>
+                                        <div>Total Sales</div>
                                     </div>
                                 </div>
+                                <br>
                             </div>
-                            <a href="#">
+                            <a href="{{ url_for('view_product') }}">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-left">View Products</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 border rounded pt-2">
-                        <div class="panel panel-green">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="border rounded bg-success panel">
                             <div class="panel-heading">
                                 <br>
                                 <div class="row">
                                     <div class="col-md-3">
                                         
                                     </div>
-                                    <div class="col-md-9 text-right">
-                                        <div class="huge">13</div>
-                                        <div>Support Tickets!</div>
+                                    <div class="col-md-8 text-right">
+                                        <div class="huge">26</div>
+                                        <div>Total Movement</div>
                                     </div>
                                 </div>
+                                <br>
                             </div>
-                            <a href="#">
+                            <a href="{{ url_for('view_product') }}">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="text-right">View Products</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
