--- a/inventorymanagement/templates/view_productmovement.html
+++ b/inventorymanagement/templates/view_productmovement.html
@@ -15,11 +15,11 @@
             <div class="col-md-12 border rounded pt-2">
                 <div class="row">
                     <div class="col-md-10">
-                        <h2>Inventory Product</h2>
+                        <h2>Inventory Product Movement</h2>
                     </div>
                     <div class="col-md-2 float-right">
-                        {% set href = url_for('add_product') %}
-                        <button class="btn btn-success" onclick=" window.location.href='{{ href }}';">Add Product</button>
+                        {% set href = url_for('add_productmovement') %}
+                        <button class="btn btn-success" onclick=" window.location.href='{{ href }}';">Move Product</button>
                     </div>
                 </div>
             </div>
