--- a/inventorymanagement/templates/home.html
+++ b/inventorymanagement/templates/home.html
@@ -86,7 +86,7 @@
                                 </div>
                                 <br>
                             </div>
-                            <a href="{{ url_for('view_product') }}">
+                            <a href="{{ url_for('view_productmovement') }}">
                                 <div class="panel-footer">
                                     <span class="text-right">View Products</span>
                                     <div class="clearfix"></div>
