--- a/inventorymanagement/templates/layout.html
+++ b/inventorymanagement/templates/layout.html
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('view_sales') }}">Sales</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('view_productmovement') }}">Movement</a>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('about') }}">About</a>
