--- a/inventorymanagement/templates/edit_productmovement.html
+++ b/inventorymanagement/templates/edit_productmovement.html
@@ -1,6 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
-
-    
-
+    <div class="col-md-6 offset-md-3 border pt-2">
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <form method="POST" action="">
+                {{ form.hidden_tag() }} <!--CSRF TOKEN -->
+                    <fieldset class="form-group">
+                        <div class="form-group">
+                            {{ form.name.label(class="form-control-label") }}
+                            {{ form.name(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.fromLocation.label(class="form-control-label") }}
+                            {{ form.fromLocation(class="form-control form-control-lg") }}
+                            {{ form.fromLocationId(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.toLocation.label(class="form-control-label") }}
+                            {{ form.toLocation(class="form-control form-control-lg") }}
+                            {{ form.toLocationId(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.quantity.label(class="form-control-label") }}
+                            {{ form.quantity(class="form-control form-control-lg") }}
+                            {{ form.timestamp(class="form-control form-control-lg") }}
+                        </div>
+                    </fieldset>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-success") }}
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
