--- a/inventorymanagement/templates/layout.html
+++ b/inventorymanagement/templates/layout.html
@@ -19,7 +19,11 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="{{ url_for('home') }}">Inventory Manager</a>
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="{{ url_for('home') }}">Inventory Manager</a>
+            {% else %}
+                <a class="navbar-brand" href="{{ url_for('anon') }}">Inventory Manager</a>
+            {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
