--- a/inventorymanagement/templates/view_productmovement.html
+++ b/inventorymanagement/templates/view_productmovement.html
@@ -30,23 +30,20 @@
                         <div class="row">
                             <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                 <div class="row">
-                                    <div class="col-md-2 col-md-2 border-left pt-2"> 
+                                    <div class="col-md-2 col-md-2 offset-md-1 border-right pt-2"> 
                                         Product Id
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col-md-2 col-md-2 border-right pt-2">
                                         Name
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col-md-2 col-md-2 border-right pt-2">
                                         Quantity
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col-md-2 col-md-2 border-right pt-2">
                                         Location
                                     </div>
                                     <div class="col-md-2 col-md-2 border-left pt-2">
                                         Edit
-                                    </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
-                                        Move
                                     </div>
                                 </div>
                             </div>
@@ -58,23 +55,20 @@
                             <div class="row">
                                 <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                     <div class="row">
-                                        <div class="col-md-2 col-md-2 border-left pt-2"> 
+                                        <div class="col-md-2 col-md-2 offset-md-1 border-right pt-2"> 
                                             Product Id
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col-md-2 col-md-2 border-right pt-2">
                                             Name
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col-md-2 col-md-2 border-right pt-2">
                                             Quantity
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col-md-2 col-md-2 border-right pt-2">
                                             Location
                                         </div>
                                         <div class="col-md-2 col-md-2 border-left pt-2">
-                                            <a href="{{ url_for('edit_product') }}">Edit</a>
-                                        </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
-                                                <a href="{{ url_for('add_productmovement') }}">Move</a>
+                                            <a href="{{ url_for('edit_productmovement') }}">Edit</a>
                                         </div>
                                     </div>
                                 </div>
