--- a/inventorymanagement/templates/add_product.html
+++ b/inventorymanagement/templates/add_product.html
@@ -11,14 +11,12 @@
                             {{ form.name.label(class="form-control-label") }}
                             {{ form.name(class="form-control form-control-lg") }}
                         </div>
-                        <div class="form-group">
-                            {{ form.location.label(class="form-control-label") }}
-                            {{ form.location(class="form-control form-control-lg") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.quantity.label(class="form-control-label") }}
-                            {{ form.quantity(class="form-control form-control-lg") }}
-                        </div>
+                        {% for location in locations %}
+                            <div class="form-group">
+                                <label class="form-control-label">{{ location }} Quantity</label>
+                                <input class="form-control form-control-lg" id="{{ location }}">       
+                            </div>
+                        {% endfor %}
                     </fieldset>
                     <div class="form-group">
                         {{ form.submit(class="btn btn-success") }}
