--- a/inventorymanagement/templates/add_product.html
+++ b/inventorymanagement/templates/add_product.html
@@ -14,7 +14,7 @@
                         {% for location in locations %}
                             <div class="form-group">
                                 <label class="form-control-label">{{ location }} Quantity</label>
-                                <input class="form-control form-control-lg" id="{{ location }}">       
+                                <input class="form-control form-control-lg" id="{{ location }}" value="0">       
                             </div>
                         {% endfor %}
                     </fieldset>
