--- a/inventorymanagement/templates/add_product.html
+++ b/inventorymanagement/templates/add_product.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="col-md-6 offset-md-3 border pt-2">
-        <br>
         <div class="row">
             <div class="col-md-12">
                 <form method="POST" action="">
@@ -11,6 +10,15 @@
                             {{ form.name.label(class="form-control-label") }}
                             {{ form.name(class="form-control form-control-lg") }}
                         </div>
+                    </fieldset>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <label class="form-control-label">Locations</label>
+            </div>
+            <div class="col-md-12" style="height:400px; overflow: auto;">
+                    <fieldset>
                         {% for location in locations %}
                             <div class="form-group">
                                 <label class="form-control-label">{{ location }} Quantity</label>
@@ -18,9 +26,16 @@
                             </div>
                         {% endfor %}
                     </fieldset>
-                    <div class="form-group">
-                        {{ form.submit(class="btn btn-success") }}
-                    </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                    <fieldset>
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-success") }}
+                        </div>
+                    </fieldset>
                 </form>
             </div>
         </div>
