--- a/inventorymanagement/templates/home.html
+++ b/inventorymanagement/templates/home.html
@@ -17,7 +17,7 @@
                                 </div>
                                 <br>
                             </div>
-                            <a href="{{ url_for('view_product') }}">
+                            <a href="{{ url_for('view_product') }}" style="text-decoration:none; color:black;">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Products</span>
                                     <div class="clearfix"></div>
@@ -40,7 +40,7 @@
                                 </div>
                                 <br>
                             </div>
-                            <a href="{{ url_for('view_location') }}">
+                            <a href="{{ url_for('view_location') }}" style="text-decoration:none; color:black;">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Locations</span>
                                     <div class="clearfix"></div>
@@ -63,9 +63,9 @@
                                 </div>
                                 <br>
                             </div>
-                            <a href="{{ url_for('view_product') }}">
+                            <a href="{{ url_for('view_sales') }}" style="text-decoration:none; color:black;">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Products</span>
+                                    <span class="pull-left">View Sales</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -86,9 +86,9 @@
                                 </div>
                                 <br>
                             </div>
-                            <a href="{{ url_for('view_productmovement') }}">
+                            <a href="{{ url_for('view_productmovement') }}" style="text-decoration:none; color:black;">
                                 <div class="panel-footer">
-                                    <span class="text-right">View Products</span>
+                                    <span class="text-right">Product Movement</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
