--- a/inventorymanagement/templates/view_location.html
+++ b/inventorymanagement/templates/view_location.html
@@ -60,7 +60,7 @@
                                             {{ location.location_name }}
                                         </div>
                                         <div class="col-md-4 border-left pt-2">
-                                                <a href="{{ url_for('edit_location') }}">Edit</a>
+                                                <a href="{{ url_for('edit_location', location_id=location.location_id) }}">Edit</a>
                                         </div>
                                     </div>
                                 </div>
