--- a/inventorymanagement/templates/add_productmovement.html
+++ b/inventorymanagement/templates/add_productmovement.html
@@ -22,7 +22,10 @@
                         <div class="form-group">
                             {{ form.quantity.label(class="form-control-label") }}
                             {{ form.quantity(class="form-control form-control-lg") }}
-                            {{ form.timestamp(class="form-control form-control-lg") }}
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label">Date</label>
+                            <input name="timestamp" id="timestamp" class="form-control form-control-lg" value="{{ time }}" disabled>
                         </div>
                     </fieldset>
                     <div class="form-group">
