list[] input from form changes

--- a/inventorymanagement/templates/add_product.html
+++ b/inventorymanagement/templates/add_product.html
@@ -22,7 +22,7 @@
                         {% for location in locations %}
                             <div class="form-group">
                                 <label class="form-control-label">{{ location }} Quantity</label>
-                                <input class="form-control form-control-lg" id="{{ location }}" name="{{ location }}" value="0">       
+                                <input class="form-control form-control-lg" id="places[]" name="places[]" value="0">       
                             </div>
                         {% endfor %}
                     </fieldset>
