MySQL changes incorporated in Location

--- a/inventorymanagement/templates/edit_location.html
+++ b/inventorymanagement/templates/edit_location.html
@@ -9,7 +9,7 @@
                     <fieldset class="form-group">
                         <div class="form-group">
                             <label class="form-control-label" for="name">Edit Location Name</label>
-                            <input class="form-control form-control-lg" id="name" name="name" required type="text" value="{{ location.location_name }}">
+                            <input class="form-control form-control-lg" id="name" name="name" required type="text" value="{{ location[1] }}">
                         </div>
                     </fieldset>
                     <div class="form-group">
